// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gilded Rose > Aged Brie with sellIn -1 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn -1 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn -1 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 3,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn -1 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn -1 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn -1 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn -2 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn -2 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn -2 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 3,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn -2 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn -2 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn -2 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 0 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 0 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 0 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 3,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 0 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 0 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 0 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 1 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 1 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 1 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 1 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 1 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 1 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 2 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 2 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 2 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 2 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 2 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 2 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 3 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 3 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 3 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 3 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 3 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 3 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 4 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 4 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 4 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 4 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 4 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 4 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 5 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 5 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 5 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 5 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 5 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 5 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 6 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 6 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 6 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 6 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 6 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 6 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 7 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 7 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 7 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 7 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 7 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 7 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 2`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 3`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 4`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 5`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 6`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 7`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 8`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 9`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 10`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 11`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 12`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 13`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 14`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 15`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 10 16`] = `
Item {
  "name": "Aged Brie",
  "quality": 11,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 10 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 11 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 11 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 11 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 11 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 11 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 11 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 12 and quality -1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 12 and quality 0 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 12 and quality 1 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 12 and quality 49 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 12 and quality 50 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Aged Brie with sellIn 12 and quality 51 1`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -1 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -1 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -1 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -1 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -1 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -1 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -2 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -2 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -2 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -2 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -2 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn -2 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 0 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 0 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 0 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 0 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 0 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 0 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 1 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 1 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 1 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 1 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 1 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 1 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 2 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 2 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 2 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 2 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 2 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 2 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 3 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 3 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 3 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 3 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 3 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 3 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 4 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 4 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 4 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 4 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 4 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 4 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 5 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 5 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 5 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 5 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 5 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 5 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 6 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 6 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 6 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 6 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 6 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 6 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 7 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 7 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 7 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 7 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 7 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 7 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 2`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 3`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 4`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 5`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 6`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 7`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 8`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 9`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 10`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 11`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 12`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 13`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 14`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 15`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 10 16`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 12,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 10 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 11 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 11 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 11 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 11 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 11 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 11 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 12 and quality -1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 12 and quality 0 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 12 and quality 1 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 12 and quality 49 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 12 and quality 50 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Backstage passes to a TAFKAL80ETC concert with sellIn 12 and quality 51 1`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Banana with sellIn -1 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Banana with sellIn -1 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Banana with sellIn -1 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Banana with sellIn -1 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 47,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Banana with sellIn -1 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Banana with sellIn -1 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Banana with sellIn -2 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Banana with sellIn -2 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Banana with sellIn -2 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Banana with sellIn -2 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 47,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Banana with sellIn -2 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Banana with sellIn -2 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": -3,
}
`;

exports[`Gilded Rose > Banana with sellIn 0 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Banana with sellIn 0 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Banana with sellIn 0 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Banana with sellIn 0 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 47,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Banana with sellIn 0 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Banana with sellIn 0 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Banana with sellIn 1 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Banana with sellIn 1 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Banana with sellIn 1 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Banana with sellIn 1 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Banana with sellIn 1 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Banana with sellIn 1 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Banana with sellIn 2 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Banana with sellIn 2 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Banana with sellIn 2 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Banana with sellIn 2 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Banana with sellIn 2 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Banana with sellIn 2 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Banana with sellIn 3 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Banana with sellIn 3 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Banana with sellIn 3 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Banana with sellIn 3 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Banana with sellIn 3 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Banana with sellIn 3 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Banana with sellIn 4 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Banana with sellIn 4 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Banana with sellIn 4 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Banana with sellIn 4 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Banana with sellIn 4 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Banana with sellIn 4 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Banana with sellIn 5 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Banana with sellIn 5 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Banana with sellIn 5 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Banana with sellIn 5 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Banana with sellIn 5 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Banana with sellIn 5 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Banana with sellIn 6 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Banana with sellIn 6 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Banana with sellIn 6 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Banana with sellIn 6 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Banana with sellIn 6 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Banana with sellIn 6 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Banana with sellIn 7 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Banana with sellIn 7 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Banana with sellIn 7 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Banana with sellIn 7 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Banana with sellIn 7 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Banana with sellIn 7 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 1`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 2`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 3`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 4`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 5`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 6`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 7`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 8`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 9`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 10`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 11`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 12`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 13`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 14`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 15`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 10 16`] = `
Item {
  "name": "Banana",
  "quality": 9,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 10 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose > Banana with sellIn 11 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Banana with sellIn 11 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Banana with sellIn 11 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Banana with sellIn 11 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Banana with sellIn 11 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Banana with sellIn 11 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Banana with sellIn 12 and quality -1 1`] = `
Item {
  "name": "Banana",
  "quality": -1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Banana with sellIn 12 and quality 0 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Banana with sellIn 12 and quality 1 1`] = `
Item {
  "name": "Banana",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Banana with sellIn 12 and quality 49 1`] = `
Item {
  "name": "Banana",
  "quality": 48,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Banana with sellIn 12 and quality 50 1`] = `
Item {
  "name": "Banana",
  "quality": 49,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Banana with sellIn 12 and quality 51 1`] = `
Item {
  "name": "Banana",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -1 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -1 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -1 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -1 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -1 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -1 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": -1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -2 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -2 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -2 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -2 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -2 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn -2 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": -2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 0 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 0 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 0 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 0 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 0 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 0 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 0,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 1 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 1 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 1 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 1 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 1 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 1 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 1,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 2 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 2 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 2 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 2 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 2 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 2 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 2,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 3 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 3 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 3 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 3 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 3 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 3 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 3,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 4 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 4 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 4 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 4 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 4 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 4 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 4,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 5 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 5 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 5 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 5 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 5 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 5 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 5,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 6 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 6 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 6 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 6 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 6 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 6 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 6,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 7 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 7 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 7 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 7 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 7 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 7 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 7,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 2`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 3`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 4`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 5`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 6`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 7`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 8`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 9`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 10`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 11`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 12`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 13`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 14`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 15`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 10 16`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 10,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 10 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 10,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 11 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 11 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 11 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 11 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 11 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 11 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 11,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 12 and quality -1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": -1,
  "sellIn": 12,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 12 and quality 0 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 12,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 12 and quality 1 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 12,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 12 and quality 49 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 12,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 12 and quality 50 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 12,
}
`;

exports[`Gilded Rose > Sulfuras, Hand of Ragnaros with sellIn 12 and quality 51 1`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 12,
}
`;
